--- a/projetsperso.html
+++ b/projetsperso.html
@@ -16,12 +16,34 @@
 <body>
     <header>
         <nav class="nav-bar">
+            <div class="image">
+                <img src="images/logo.svg" id="icon">
+            </div>
             <ul class="list">
-                <li class="elem-list"><a class="links" href="accueil.html">Accueil</a></li>
-                <li class="elem-list"><a class="links" href="projets.html">Projets</a></li>
+                <li class="elem-list"><a class="links" href="#">Accueil</a></li>
+                <li class="deroulant"><a class="links" href="projets.html">Projets</a>
+                <ul class="sous">
+                    <li><a href="projetsuniv.html">Projets universitaires</a></li>
+                    <li><a href="projetsperso.html">Projets personnels</a></li>
+                </ul>
+            </li>
                 <li class="elem-list"><a class="links" href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
+    <main>    
+        <div class="titreprojet">
+            <h1>
+                Mes projets personnels
+            </h1>
+            <p>Ici, vous trouverez tous mes projets personnels.</p>
+        </div>
+        <div class="content">
+            <img src="images/produits/solidworks.jpg" alt="SolidWorks">
+            <div class="content-text">
+                <h2>Projet 1 :</h2><br>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
