--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="nav-bar">
             <ul class="list">
-                <li class="elem-list"><a class="links" href="accueil.html">Accueil</a></li>
+                <li class="elem-list"><a class="links" href="index.html">Accueil</a></li>
                 <li class="elem-list"><a class="links" href="projets.html">Projets</a></li>
                 <li class="elem-list"><a class="links" href="contact.html">Contact</a></li>
             </ul>
