--- a/projetsuniv.html
+++ b/projetsuniv.html
@@ -19,7 +19,7 @@
                 <img src="images/logo.svg" id="icon">
             </div>
             <ul class="list">
-                <li class="elem-list"><a class="links" href="accueil.html">Accueil</a></li>
+                <li class="elem-list"><a class="links" href="index.html">Accueil</a></li>
                 <li class="deroulant"><a class="links" href="#">Projets</a>
                 <ul class="sous">
                     <li><a href="projetsuniv.html">Projets universitaires</a></li>
