--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Accueil du portefolio</title>
     <link rel="icon" type="image/ico" href="images/logos/favicon.ico">
     <link rel="stylesheet" href="header_footer.css">
-    <link rel="stylesheet" href="accueil.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
                 <img src="images/logo.svg" id="icon">
             </div>
             <ul class="list">
-                <li class="elem-list"><a class="links" href="#">Accueil</a></li>
+                <li class="elem-list"><a class="links" href="index.html">Accueil</a></li>
                 <li class="deroulant"><a class="links" href="projets.html">Projets</a>
                 <ul class="sous">
                     <li><a href="projetsuniv.html">Projets universitaires</a></li>
