--- a/projetsperso.html
+++ b/projetsperso.html
@@ -20,7 +20,7 @@
                 <img src="images/logo.svg" id="icon">
             </div>
             <ul class="list">
-                <li class="elem-list"><a class="links" href="#">Accueil</a></li>
+                <li class="elem-list"><a class="links" href="index.html">Accueil</a></li>
                 <li class="deroulant"><a class="links" href="projets.html">Projets</a>
                 <ul class="sous">
                     <li><a href="projetsuniv.html">Projets universitaires</a></li>
