--- a/projetsperso.html
+++ b/projetsperso.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="nav-bar">
             <div class="image">
-                <img src="images/logo.svg" id="icon">
+                <img src="images/nom.svg" id="icon">
             </div>
             <ul class="list">
                 <li class="elem-list"><a class="links" href="index.html">Accueil</a></li>
@@ -26,24 +26,12 @@
                     <li><a href="projetsuniv.html">Projets universitaires</a></li>
                     <li><a href="projetsperso.html">Projets personnels</a></li>
                 </ul>
-            </li>
-                <li class="elem-list"><a class="links" href="contact.html">Contact</a></li>
+                </li>
             </ul>
         </nav>
     </header>
     <main>    
-        <div class="titreprojet">
-            <h1>
-                Mes projets personnels
-            </h1>
-            <p>Ici, vous trouverez tous mes projets personnels.</p>
-        </div>
-        <div class="content">
-            <img src="images/produits/solidworks.jpg" alt="SolidWorks">
-            <div class="content-text">
-                <h2>Projet 1 :</h2><br>
-            </div>
-        </div>
+        <h1>Oups ! Il n'y encore rien de fait.</h1>
     </main>
 </body>
 </html>
