--- a/projetsuniv.html
+++ b/projetsuniv.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="nav-bar">
             <div class="image">
-                <img src="images/logo.svg" id="icon">
+                <img src="images/nom.svg" id="icon">
             </div>
             <ul class="list">
                 <li class="elem-list"><a class="links" href="index.html">Accueil</a></li>
@@ -25,40 +25,48 @@
                     <li><a href="projetsuniv.html">Projets universitaires</a></li>
                     <li><a href="projetsperso.html">Projets personnels</a></li>
                 </ul>
-            </li>
-                <li class="elem-list"><a class="links" href="contact.html">Contact</a></li>
+                </li>
             </ul>
         </nav>
     </header>
     <main>
-        <div class="first">
-            <div class="first-text">
-                <p>
-                    Mes projets universitaires
-                </p><br>
-                <p>Ici, vous trouverez les projets que j'ai réalisé au cours de mon BUT Informatique.</p>
-            </div>
-        </div>  
+        <div class="first-text">
+            <p class="titre-first">
+                Mes projets universitaires
+            </p><br>
+            <p class="sous-titre-first">Ici, vous trouverez les projets que j'ai réalisé au cours de mon BUT Informatique.</p>
+        </div>
+
+        <div class="margin_page"></div>
         
         <div class="content">
-            <img src="images/projets_univ/3ds_full_873x264_blue.png" alt="Sae56">
             <div class="content-text">
-                <h2>Projet 1 :</h2><br>
-                <p>Ce projet ...</p>
+                <h2>Projet 1 : Création d'un site informatif</h2><br>
+                <p>Ce projet a été fait dans le cadre de la SAÉ1.05-06.</p>
+                <p>UE 5 : Conduire un projet</p>
+                <p>UE 6 : Collaborer au sein d'une équipe informatique</p>
+                <p>Nous devions créer, avec mon groupe, un site web informatif sur une entreprise du numérique.</p><br>
                 <a href="sae56.html">Cliquez pour voir le contenu du projet.</a>
             </div>
+            <img src="images/projets_univ/3ds_full_873x264_blue.png" alt="Sae56">
         </div>
 
         <div class="margin_page"></div>
 
         <div class="content">
-            <img src="images/" alt="Sae34">
             <div class="content-text">
-                <h2>Projet 2 :</h2>
-                <p>Ce projet ...</p>
-                <a href="#">Cliquez pour voir le contenu du projet.</a>
+                <h2>Projet 2 : Développement d'une base de données + création d'une machine virtuelle</h2><br>
+                <p>Ce projet a été fait dans le cadre de la SAÉ1.03-04.</p>
+                <p>UE 3 : Administrer des systèmes informatiques communiquants complexes</p>
+                <p>UE 4 : Gérer des données de l'information</p>
+                <p>Nous devions développer une base de données pour une entreprise du développement durable.</p><br>
+                <a href="sae34.html">Cliquez pour voir le contenu du projet.</a>
             </div>
+            <img src="images/logo.svg" alt="Sae34" id="sae34">
         </div>
+
+        <div class="margin_page"></div>
+
     </main>
 </body>
 </html>
