--- a/sae34.html
+++ b/sae34.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil du portefolio</title>
-    <link rel="icon" type="image/ico" href="images/logos/favicon.ico">
+    <title>Projet 2 - SAÉ1.03-04</title>
     <link rel="stylesheet" href="header_footer.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="sae34.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,12 +31,5 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <div class="presentation">
-            <p class="bienvenue">Bienvenue sur le portfolio de</p>
-            <p class="prenom">Maeva</p>
-        </div>
-
-    </main>
 </body>
 </html>
