--- a/sae56.html
+++ b/sae56.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projet 1 - Site informatif</title>
+    <title>Projet 1 - SAÉ1.05-06</title>
     <link rel="stylesheet" href="header_footer.css">
     <link rel="stylesheet" href="sae56.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
@@ -18,7 +18,7 @@
     <header>
         <nav class="nav-bar">
             <div class="image">
-                <img src="images/logo.svg" id="icon">
+                <img src="images/nom.svg" id="icon">
             </div>
             <ul class="list">
                 <li class="elem-list"><a class="links" href="index.html">Accueil</a></li>
@@ -27,8 +27,7 @@
                     <li><a href="projetsuniv.html">Projets universitaires</a></li>
                     <li><a href="projetsperso.html">Projets personnels</a></li>
                 </ul>
-            </li>
-                <li class="elem-list"><a class="links" href="contact.html">Contact</a></li>
+                </li>
             </ul>
         </nav>
     </header>
