1ère trace et modif

--- a/projetsuniv.html
+++ b/projetsuniv.html
@@ -55,14 +55,15 @@
 
         <div class="content">
             <div class="content-text">
-                <h2>Projet 2 : Développement d'une base de données + création d'une machine virtuelle</h2><br>
-                <p>Ce projet a été fait dans le cadre de la SAÉ1.03-04.</p>
+                <h2>Projet 2 : Développement site de e-commerce + hébergement sur machine virtuelle + gestion du projet</h2><br>
+                <p>Ce projet a été fait dans le cadre de la SAÉ2.03-04-05.</p>
                 <p>UE 3 : Administrer des systèmes informatiques communiquants complexes</p>
                 <p>UE 4 : Gérer des données de l'information</p>
-                <p>Nous devions développer une base de données pour une entreprise du développement durable.</p><br>
-                <a href="sae34.html">Cliquez pour voir le contenu du projet.</a>
+                <p>UE 5 : Conduire un projet</p>
+                <p>Nous devions développer un site de e-commerce puis l'héberger sur une machine virtuelle en sachant comment gérer ce projet informatique.</p><br>
+                <a href="sae345.html">Cliquez pour voir le contenu du projet.</a>
             </div>
-            <img src="images/logo.svg" alt="Sae34" id="sae34">
+            <img src="images/projets_univ/4303a159a677303368fb9e435734171f.png" alt="Sae34" id="sae34">
         </div>
 
         <div class="margin_page"></div>
