2ème trace et modif

--- a/projetsuniv.html
+++ b/projetsuniv.html
@@ -38,24 +38,10 @@
         </div>
 
         <div class="margin_page"></div>
-        
+    
         <div class="content">
             <div class="content-text">
-                <h2>Projet 1 : Création d'un site informatif</h2><br>
-                <p>Ce projet a été fait dans le cadre de la SAÉ1.05-06.</p>
-                <p>UE 5 : Conduire un projet</p>
-                <p>UE 6 : Collaborer au sein d'une équipe informatique</p>
-                <p>Nous devions créer, avec mon groupe, un site web informatif sur une entreprise du numérique.</p><br>
-                <a href="sae56.html">Cliquez pour voir le contenu du projet.</a>
-            </div>
-            <img src="images/projets_univ/3ds_full_873x264_blue.png" alt="Sae56">
-        </div>
-
-        <div class="margin_page"></div>
-
-        <div class="content">
-            <div class="content-text">
-                <h2>Projet 2 : Développement site de e-commerce + hébergement sur machine virtuelle + gestion du projet</h2><br>
+                <h2>Projet 1 : Développement site de e-commerce + hébergement sur machine virtuelle + gestion du projet</h2><br>
                 <p>Ce projet a été fait dans le cadre de la SAÉ2.03-04-05.</p>
                 <p>UE 3 : Administrer des systèmes informatiques communiquants complexes</p>
                 <p>UE 4 : Gérer des données de l'information</p>
@@ -64,6 +50,21 @@
                 <a href="sae345.html">Cliquez pour voir le contenu du projet.</a>
             </div>
             <img src="images/projets_univ/4303a159a677303368fb9e435734171f.png" alt="Sae34" id="sae34">
+        </div>
+
+        <div class="margin_page"></div>
+
+        <div class="content">
+            <div class="content-text">
+                <h2>Projet 2 : Création d'un jeu de plateau</h2><br>
+                <p>Ce projet a été fait dans le cadre de la SAÉ1.01-02-06.</p>
+                <p>UE 1 : Réaliser un développement d'application</p>
+                <p>UE 2 : Optimiser des applications</p>
+                <p>UE 6 : Collaborer au sein d'une équipe informatique</p>
+                <p>Nous devions créer, avec mon groupe, un jeu de plateau à l'aide de boardifier.</p><br>
+                <a href="sae126.html">Cliquez pour voir le contenu du projet.</a>
+            </div>
+            <img src="images/projets_univ/orbito-bil-la-ribouldingue-2_900x900.webp" alt="Sae56">
         </div>
 
         <div class="margin_page"></div>
