--- a/sae345.html
+++ b/sae345.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projet 2 - SAÉ1.03-04</title>
+    <title>Projet 1 - SAÉ1.03-04-05</title>
     <link rel="stylesheet" href="header_footer.css">
     <link rel="stylesheet" href="sae345.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
